# SecRandom

./: .gitattributes  .gitignore  CONTRIBUTING.md  README.md  SRsetup.iss  Secrandom.spec  main.py  metadata.yaml  packaging_utils.py  packaging_utils_deb.py  pyproject.toml  secrandom_ipc_send_url.py  version_info.txt
.github/workflows/: build-unified.yml
CHANGELOG/v1.3.2-alpha.5/: CHANGELOG.md
CHANGELOG/v1.3.2-alpha.6/: CHANGELOG.md
CHANGELOG/v2.0.0/: CHANGELOG.md
CHANGELOG/v2.1.0/: CHANGELOG.md
CHANGELOG/v2.2.0/: CHANGELOG.md
CHANGELOG/v2.2.1/: CHANGELOG.md
CHANGELOG/v2.2.5/: CHANGELOG.md
CHANGELOG/v2.2.6/: CHANGELOG.md
CHANGELOG/v2.2.7/: CHANGELOG.md
CHANGELOG/v2.2.8/: CHANGELOG.md
CHANGELOG/v2.3.0-beta.1/: CHANGELOG.md
CHANGELOG/v2.3.0-beta.2/: CHANGELOG.md
CHANGELOG/v2.3.0-beta.3/: CHANGELOG.md
app/Language/: obtain_language.py
app/Language/modules/: basic_settings.py  camera_preview.py  countdown_timer.py  custom_settings.py  extraction_settings.py  fair_draw.py  guide.py  history.py  linkage_settings.py  list_management.py  log_viewer.py  lottery_list.py  lottery_main.py  more_settings.py  music_settings.py  notification_settings.py  remaining_list.py  roll_call_list.py  roll_call_main.py  safety_settings.py  sidebar_tray_management.py  theme_management.py  update.py  voice_settings.py
app/common/IPC_URL/: csharp_ipc_handler.py  protocol_manager.py  security_verifier.py  url_command_handler.py  url_ipc_handler.py
app/common/behind_scenes/: behind_scenes_utils.py
app/common/camera_preview_backend/: __init__.py  audio_player.py  detection.py  devices.py  image_utils.py  workers.py
app/common/data/: list.py
app/common/display/: result_display.py
app/common/extraction/: cses_parser.py  extract.py
app/common/fair_draw/: avg_gap_protection.py
app/common/history/: file_utils.py  history.py  utils.py  (+3 more)
app/core/: app_init.py  cs_ipc_handler_setup.py  font_manager.py  single_instance.py  url_handler_setup.py  utils.py  window_manager.py
app/page_building/: another_window.py  main_window_page.py  page_template.py  settings_window_page.py  window_template.py
app/tools/: backup_utils.py  config.py  language_manager.py  path_utils.py  personalised.py  secure_store.py  settings_access.py  settings_default.py  settings_default_storage.py  settings_visibility_config.py  settings_visibility_manager.py  update_utils.py  url_handler.py  variable.py
data/cv_models/: version-slim-320.onnx
data/dlls/: dotnet.runtimeconfig.json
resources/: CONTRIBUTING_EN.md  CONTRIBUTING_ZH_TW.md  README_EN.md  README_ZH_TW.md
scripts/: generate-stubs.ps1  import_crowdin_language.py
vendors/pythonnet-stub-generator/: LICENCE.md
(+101 files in other folders)
