[project]
name = "secrandom"
version = "1.1.0"
description = "公平随机抽取系统 - Modern educational tool with intelligent weighting algorithm"
readme = "README.md"
requires-python = "==3.13.5"

dependencies = [
    # === UI / 界面 ===
    "PySide6-Fluent-Widgets==1.11.0",
    "pyside6>6.6.3.1",
    "pysidesix-frameless-window>=0.7.4",
    "darkdetect==0.8.0",
    # === 核心/日志/工具 ===
    # 注意：`asyncio` 为标准库，通常不应列在依赖中；已注释以提示移除
    # "asyncio~=4.0.0",
    "loguru==0.7.3",
    "colorama==0.4.6",
    "packaging==25.0",
    "pyyaml>=6.0.1",
    "sentry-sdk>=2.0.0",
    # === 数据处理 / 图像 / 文件 ===
    "numpy>=2.0.0",
    "pandas>2.0.3",
    "pillow>=10.4.0",
    "openpyxl==3.1.5",
    "imageio>=2.37.2",
    "opencv-python>=4.13.0.90",
    "qrcode>=7.4.2",
    "pyqrcode~=1.2.1",
    "pypng~=0.20220715.0",
    "colorthief==0.2.1",
    # === 网络 / TTS 服务 ===
    "requests==2.32.5",
    "aiohttp>=3.13.2",
    "edge-tts==7.2.7",
    # === 音频 / TTS 本地 ===
    "pyttsx3==2.99",
    "sounddevice==0.5.3",
    "soundfile==0.13.1",
    # === 系统 / 工具 ===
    "psutil~=7.1.3",
    "keyboard==0.13.5",
    # === 安全 / 加密 ===
    "pyotp==2.9.0",
    "pycryptodome==3.23.0",
    # === 平台（Windows） ===
    "pywin32==311; platform_system=='Windows'",
    "win32_setctime==1.2.0; platform_system == 'Windows'",
    "winshell==0.6; platform_system == 'Windows'",
    "comtypes==1.4.13",
    "wmi==1.5.1; platform_system == 'Windows'",
    "pycaw==20251023",
    # === 平台（Linux） ===
    "pulsectl==24.8.0; platform_system == 'Linux'",
    # === 通知工具 ===
    "plyer>=2.1.0",
    # === 构建 / 打包 / 模板 / 开发时工具 ===
    "sip~=6.14.0",
    "jinja2~=3.1.6",
    "pyinstaller>=6.0.0",
    "nuitka>=2.8.6",
    "pre-commit>=4.4.0",
    "pythonnet>=3.0.5",
]

[project.optional-dependencies]
dev = ["pytest>=6.0", "black", "flake8"]

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

# 添加这个配置告诉 setuptools 不要尝试自动发现包
[tool.setuptools]
py-modules = []

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true

[dependency-groups]
dev = [
    "pytest>=6.0",
    "black",
    "flake8",
    "pyright>=1.1.407",
    "pre-commit>=3.5.0",
    "ruff>=0.14.3",
    "tomlkit>=0.13.3",
    "mypy>=1.19.0",
    "netstandard-stubs>=2.0.1",
]

[tool.ruff]

[tool.ruff.lint]
# 忽略特定错误/警告（例如 F405: "name may be undefined, or defined from star imports"）
ignore = [
    "F405",
    "E722",
    "E501",
    "B012",
    "F403",
    "C901",
    "B007",
    "F841",
    "C416",
    "C414",
    "E402",
]
# 可选：关闭某些规则或配置
extend-ignore = []
select = ["E", "F", "W", "C", "B", "B9"]
